--- a/src/PetApplication/Views/PetAnimals/Details.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Details.cshtml
@@ -4,159 +4,178 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>PetAnimal</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.PetType.PetTypeName)
-        </dt>
+<div class="container container-table">
+    <div id="bannerImage" style="margin-left:20%;">
+        @*<img src="~/Images/banner.jpg" />*@
 
-        <dd>
-            @Html.DisplayFor(model => model.PetType.PetTypeName)
-        </dd>
+    </div>
+    <div style="margin-top:5%;">
+        <h4>PetAnimal</h4>
+        <dl class="dl-horizontal" style="margin-left:30% auto;">
+            @*<dt>
+                    @Html.DisplayNameFor(model => model.PetImageUrl)
+                </dt>*@
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <dd>
+                @*@Html.DisplayFor(model => model.PetImageUrl)*@
+                <img @*height="150" width="150"*@ class="col-sm-5 embed-responsive" src="@Url.Content(Model.ImageUrl)" />
+                @*@Html.DisplayFor(model => model.PetImageUrl)*@
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            </dd>
+        </dl>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShortCode)
-        </dt>
+        <hr />
 
-        <dd>
-            @Html.DisplayFor(model => model.ShortCode)
-        </dd>
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.PetType.PetTypeName)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Age)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.PetType.PetTypeName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Age)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ShortCode)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ShortCode)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Age)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Age)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Quantity)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Color)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Details)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Color)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Details)
-        </dd>
+            @*<dt>
+                    @Html.DisplayNameFor(model => model.ImageUrl)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.ImageUrl)
+                </dd>*@
 
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Quantity)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Quantity)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Details)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Details)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Price)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsSold)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Price)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsSold)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.PhoneNumber)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Area)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.PhoneNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Area)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.City)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.City)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.IsSold)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Division)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.IsSold)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Division)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Area)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PetTypeName)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Area)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PetTypeName)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.City)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreateBy)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.City)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreateBy)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Division)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Division)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.PetTypeName)
+            </dt>
 
-    </dl>
+            <dd>
+                @Html.DisplayFor(model => model.PetTypeName)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.CreateBy)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.CreateBy)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.CreateDate)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.CreateDate)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
