--- a/src/PetApplication/Views/PetAnimals/Create.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Create.cshtml
@@ -122,7 +122,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.IsSold, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
@@ -130,7 +130,7 @@
                     @Html.ValidationMessageFor(model => model.IsSold, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Area, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -176,14 +176,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
     }
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
+    <div class="btn-group btn-group-sm" role="group">
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
     </div>
 </div>
     @section Scripts {
