Add delete option on details page

--- a/src/PetApplication/Views/PetAnimals/Details.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Details.cshtml
@@ -183,5 +183,6 @@
         @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary" }) &nbsp;
         @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })&nbsp;
         @Html.ActionLink("Report", "Create", "PostReports", new { id = Model.Id }, new { @class = "btn btn-danger" })
+        @Html.ActionLink("Delete", "Delete", new { id = Model.Id })
     </p>
 </div>
