--- a/src/PetApplication/Views/Shared/_Layout.cshtml
+++ b/src/PetApplication/Views/Shared/_Layout.cshtml
@@ -32,10 +32,14 @@
             <div class="row">
                 <div class="col-12">
                     <div class="search-content">
-                        <form action="#" method="get">
-                            <input type="search" name="search" id="search" placeholder="Type your keyword...">
-                            <button type="submit"><img src="~/Theme/img/core-img/search.png" alt=""></button>
-                        </form>
+                        @*<form action="#" method="get">*@
+                        @using (Html.BeginForm("Index","Home",FormMethod.Get))
+                        {
+                            @*<input type="search" name="search" id="search" placeholder="Type your keyword...">*@
+                            @Html.TextBox("search")
+                            <button type="submit" value="Search"><img src="~/Theme/img/core-img/search.png" alt=""></button>
+                        }
+                        @*</form>*@
                     </div>
                 </div>
             </div>
