--- a/src/PetApplication/Theme/css/core-style.css
+++ b/src/PetApplication/Theme/css/core-style.css
@@ -593,14 +593,19 @@ img {
         -ms-flex-order: 1;
         order: 1;
         padding-top: 50px; } }
-  .main-content-wrapper .cart-table-area {
+.main-content-wrapper .cart-table-area {
     position: relative;
     z-index: 1;
     -webkit-box-flex: 0;
     -ms-flex: 0 0 calc(95% - 320px);
     flex: 0 0 calc(95% - 320px);
     width: calc(95% - 320px);
-    max-width: calc(95% - 320px); }
+    max-width: calc(95% - 320px);
+    
+}
+.view-width {
+    margin-left: 15%;
+}
     @media only screen and (min-width: 992px) and (max-width: 1199px) {
       .main-content-wrapper .cart-table-area {
         -webkit-box-flex: 0;
