Button color changed >All types of button color changed >Normal button color are "btn btn-dard" >Delete button color are "btn btn-danger"

--- a/src/PetApplication/Views/PetAnimals/Delete.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Delete.cshtml
@@ -169,8 +169,8 @@
 
             <div class="form-actions no-color">
                 <div class="btn-group btn-group-sm" role="group">
-                    <input type="submit" value="Delete" class="btn btn-danger" />
-                    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
+                    <input type="submit" value="Delete" class="btn btn-danger" />&nbsp;
+                    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
                 </div>
             </div>
         }
