--- a/src/PetApplication/Views/PetAnimals/Details.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Details.cshtml
@@ -85,8 +85,8 @@
                             </div>
                         </div>
                         <p class="btn-group btn-group-sm" role="group">
-                        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary" }) &nbsp;
-                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })&nbsp;
+                        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-dark" }) &nbsp;
+                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })&nbsp;
                         @Html.ActionLink("Report", "Create", "PostReports", new { id = Model.Id }, new { @class = "btn btn-danger" }) &nbsp;
                         @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger" })
                         </p>
