--- a/src/PetApplication/Views/PetAnimals/Edit.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Edit.cshtml
@@ -100,8 +100,8 @@
                                 <div class="form-group">
                                     <div class="col-md-offset-2 col-md-10">
                                         <div class="btn-group btn-group-sm" role="group">
-                                            <input type="submit" value="Save" class="btn btn-success" />&nbsp;&nbsp;
-                                            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
+                                            <input type="submit" value="Save" class="btn btn-dark" />&nbsp;&nbsp;
+                                            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
                                         </div>
                                     </div>
                                 </div>
