--- a/src/PetApplication/Views/PetAnimals/Index.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Index.cshtml
@@ -9,7 +9,7 @@
         <img src="~/Images/banner.jpg" />
     </div>
     <p class="btn-group btn-group-sm" role="group">
-        @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
+        @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-dark" })
     </p>
     @*<table class="table">
         <tr>
