--- a/src/PetApplication/Views/PetTypes/Create.cshtml
+++ b/src/PetApplication/Views/PetTypes/Create.cshtml
@@ -25,14 +25,14 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-dark" />
                 </div>
             </div>
         </div>
     }
 
     <div class="btn-group btn-group-sm" role="group">
-        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
     </div>
 </div>
     @section Scripts {
