--- a/src/PetApplication/Views/PetTypes/Delete.cshtml
+++ b/src/PetApplication/Views/PetTypes/Delete.cshtml
@@ -28,7 +28,7 @@
 
             <div class="btn-group btn-group-sm" role="group">
                 <input type="submit" value="Delete" class="btn btn-danger" /> 
-                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
+                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
             </div>
         }
     </div>
