--- a/src/PetApplication/Views/PetTypes/Details.cshtml
+++ b/src/PetApplication/Views/PetTypes/Details.cshtml
@@ -22,7 +22,7 @@
         </dl>
     </div>
     <p class="btn-group btn-group-sm" role="group">
-        @Html.ActionLink("Edit", "Edit", new { id = Model.PetTypeID }, new { @class = "btn btn-primary" }) |
-        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
+        @Html.ActionLink("Edit", "Edit", new { id = Model.PetTypeID }, new { @class = "btn btn-dark" }) |
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
     </p>
 </div>
