--- a/src/PetApplication/Views/Account/Login.cshtml
+++ b/src/PetApplication/Views/Account/Login.cshtml
@@ -41,16 +41,16 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Log in" class="btn btn-primary" />
+                            <input type="submit" value="Log in" class="btn btn-dark" />
                         </div>
                     </div>
                     <div class="form-group">
                         <p>
-                            @Html.ActionLink("Register as a new user", "Register", null, new { @class = "btn btn-primary" })
+                            @Html.ActionLink("Register as a new user", "Register", null, new { @class = "btn btn-dark" })
                         </p>
                         @*//Enable this once you have account confirmation enabled for password reset functionality*@
                         <p>
-                            @Html.ActionLink("Forgot your password?", "ForgotPassword", null, new { @class = "btn btn-primary" })
+                            @Html.ActionLink("Forgot your password?", "ForgotPassword", null, new { @class = "btn btn-danger" })
                         </p>
                     </div>
 
