Add petReportController and View

--- a/src/PetApplication/Views/PetAnimals/Details.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Details.cshtml
@@ -87,7 +87,7 @@
                         <p class="btn-group btn-group-sm" role="group">
                         @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-dark" }) &nbsp;
                         @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })&nbsp;
-                        @Html.ActionLink("Report", "Create", "PostReports", new { id = Model.Id }, new { @class = "btn btn-danger" }) &nbsp;
+                        @Html.ActionLink("Report", "Create", "PetReports", new { id = Model.Id }, new { @class = "btn btn-danger" }) &nbsp;
                         @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger" })
                         </p>
                         <!-- Add to Cart Form -->
